<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_PMLCustomMode" Id="{6b78c102-518a-4284-a814-64c5e55ac3c5}">
    <Declaration><![CDATA[{attribute 'to_string'}
TYPE E_PMLCustomMode : (
		//Reserved
		Production	:= 1,
		Maintenance := 2,
		Manual		:= 3,
		//User-Defined
		Home		   := 4,
		PrePositioning := 5,
		PreHeating	   := 6,
		PreProduction  := 7,
		SingleCycle	   := 8,
		SingleStep	   := 9,
		SetupMode	   := 10,
		CleanInPlace   := 11
	) DINT;
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>