<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_CommandCommon" Id="{41180789-d66b-4cfd-82a6-6f712b5f0a64}">
    <Declaration><![CDATA[TYPE ST_CommandCommon EXTENDS ST_PackMLBaseModule_Command :
	STRUCT
		Home		   : BOOL;
		Start		   : BOOL;
		Reset		   : BOOL;
		EmergencyStop  : BOOL;
		ControlledStop : BOOL;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>