<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_ConfigCommon" Id="{651c511b-2650-4802-b4ca-9c126ac83ab0}">
    <Declaration><![CDATA[TYPE ST_ConfigCommon :
STRUCT
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>