<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_RecipeCommon" Id="{709c2369-23f6-43ae-8603-e6b6a9a6d30c}">
    <Declaration><![CDATA[TYPE ST_RecipeCommon :
STRUCT
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>